--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 Be Your Own <span class="red" style="color: red">HERO</span>
               </h1>
               <div class="site-btn">
-                <a href="#" class="primary-btn btn filled-btn">Join Now</a>
+                <a href="https://smallvilleathletics.wodify.com/OnlineSalesPortal/Sessions.aspx?LocationId=4006" class="primary-btn btn filled-btn">Workout With Us Today</a>
               </div>
             </div>
           </div>
@@ -234,9 +234,9 @@
                 <p class="mb-40"><strong>Move Well. Build Strength.</strong></p>
                 <div class="site-btn about-btn">
                   <a
-                    href="tel:123456789"
+                    href="https://smallvilleathletics.wodify.com/OnlineSalesPortal/Sessions.aspx?LocationId=4006"
                     class="primary-btn btn filled-btn text-uppercase"
-                    >contact us</a
+                    >Workout With Us Today</a
                   >
                 </div>
               </div>
@@ -279,7 +279,7 @@
                 class="single-class-item-overlay-content d-flex align-items-center"
               >
                 <div class="site-btn single-classe-btn">
-                  <a href="#" class="primary-btn btn filled-btn text-uppercase"
+                  <a href="#classes" class="primary-btn btn filled-btn text-uppercase"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
                 </div>
@@ -287,8 +287,7 @@
               <div class="single-classes-inner-content">
                 <h3 class="text-uppercase mb-30">Strength</h3>
                 <p>
-                  60 minute class focused on finding a balance
-                  between Strength & Conditioning for general overall fitness.
+                  60 minute class focused on the appropriate balance between Strength & Conditioning for improving overall fitness.
                 </p>
               </div>
             </div>
@@ -302,7 +301,7 @@
                 class="single-class-item-overlay-content d-flex align-items-center"
               >
                 <div class="site-btn single-classe-btn">
-                  <a href="#" class="primary-btn btn filled-btn text-uppercase"
+                  <a href="#classes" class="primary-btn btn filled-btn text-uppercase"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
                 </div>
@@ -310,7 +309,7 @@
               <div class="single-classes-inner-content">
                 <h3 class="text-uppercase mb-30">Engine</h3>
                 <p>
-                  45 minute hybrid class focused on Muscle Endurance & Strength
+                  40 minute hybrid class focused on Muscle Endurance & Strength
                   in a HIIT format. Engine will give you the ultimate
                   cardiovascular workout.
                 </p>
@@ -326,7 +325,7 @@
                 class="single-class-item-overlay-content d-flex align-items-center"
               >
                 <div class="site-btn single-classe-btn">
-                  <a href="#" class="primary-btn btn filled-btn text-uppercase"
+                  <a href="#classes" class="primary-btn btn filled-btn text-uppercase"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
                 </div>
@@ -350,7 +349,7 @@
                 class="single-class-item-overlay-content d-flex align-items-center"
               >
                 <div class="site-btn single-classe-btn">
-                  <a href="#" class="primary-btn btn filled-btn text-uppercase"
+                  <a href="#classes" class="primary-btn btn filled-btn text-uppercase"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
                 </div>
@@ -377,7 +376,7 @@
                 class="single-class-item-overlay-content d-flex align-items-center"
               >
                 <div class="site-btn single-classe-btn">
-                  <a href="#" class="primary-btn btn filled-btn text-uppercase"
+                  <a href="#classes" class="primary-btn btn filled-btn text-uppercase"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
                 </div>
@@ -403,7 +402,7 @@
                 class="single-class-item-overlay-content d-flex align-items-center"
               >
                 <div class="site-btn single-classe-btn">
-                  <a href="#" class="primary-btn btn filled-btn text-uppercase"
+                  <a href="#classes" class="primary-btn btn filled-btn text-uppercase"
                     ><i class="fa fa-arrow-right"></i
                   ></a>
                 </div>
@@ -413,10 +412,8 @@
                   Personal Training<br />(Remote & In-Person)
                 </h3>
                 <p>
-                  Interested in a more individualized approach? Whether you're
-                  interested in building Lean Muscle Mass, Strength Training or
-                  Weight-loss we have the knowledge to build a personalized
-                  program to help you reach YOUR fitness goals
+                 Interested in a more individualized approach? Whether you're interested in building Lean Muscle Mass, Strength Training or Weight-loss. We have the knowledge to build a personalized program to help you reach YOUR fitness goals!
+
                 </p>
               </div>
             </div>
@@ -432,7 +429,7 @@
         <div class="row">
           <div class="col-lg-12 text-center mb-60">
             <div class="section-title">
-              <h1 class="text-uppercase">Weekly Class Schedule</h1>
+              <h1 class="text-uppercase" id="classes">Weekly Class Schedule</h1>
               <h4 class="text-uppercase mb-20"> (Times subject to change for Holidays or special events)</h4>
               
             </div>
@@ -466,7 +463,7 @@
                     role="tab"
                     aria-controls="engine"
                     aria-selected="false"
-                    >Engine<br />45 Min</a
+                    >Engine<br />40 Min</a
                   >
                 </li>
                 <li class="nav-item">
@@ -490,7 +487,7 @@
                     role="tab"
                     aria-controls="contact"
                     aria-selected="false"
-                    >Womens BootCamp<br />40 Min</a
+                    >BootCamp<br />40 Min</a
                   >
                 </li>
                 <li class="nav-item">
@@ -1523,19 +1520,15 @@
             <div class="why-join-us-inner-content">
               <div class="section-title mb-40">
                 <h4 class="text-uppercase mb-20">why join with us</h4>
-                <h1 class="text-uppercase">THE BEST FITNESS SERVICE</h1>
+                <h1 class="text-uppercase">FITNESS FOR ALL</h1>
               </div>
               <p>
-                On the other hand, we denounce with righteous indignation the
-                foult anuals dislike men who are so beguiled and demoralized by
-                the nuhaiicharms of pleasure of the moment, so blinded by
-                desire, that they cannot foresee the pain and trouble that are
-                bound toen sue; and equal blame belongs to those who fail in
-                their duty.
+                At Smallville we offer each athlete a personalized approach. We do so by focusing on one’s individual needs in a group fitness setting. The framework we have built allows you to consistently progress and see results without the price tag of a one-on-one personal trainer. Our community atmosphere here at Smallville benefits each athlete uniquely, it may be the piece of your training regimen you didn’t know you needed. Not only will you meet new friends you will become part of a family too, our “gym family”! We define “gym family” as a group of athletes dedicated to helping one another progress in their fitness journey. Through daily workouts you will notice yourself working harder and moving faster when you have a gym family like ours cheering you on every step of the way.
+
               </p>
               <div class="site-btn about-btn why-btn">
-                <a href="#" class="primary-btn btn filled-btn text-uppercase"
-                  >Learn More</a
+                <a href="https://smallvilleathletics.wodify.com/OnlineSalesPortal/Sessions.aspx?LocationId=4006" class="primary-btn btn filled-btn text-uppercase"
+                  >workout With Us Today</a
                 >
               </div>
             </div>
@@ -1561,8 +1554,8 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-7 col-md-7 col-sm-6 mb-60">
             <div class="section-title">
-              <h4 class="text-uppercase mb-20">- Team mates -</h4>
-              <h1 class="text-uppercase">Our Expert Coaches</h1>
+              <h4 class="text-uppercase mb-20">Teammates</h4>
+              <!-- <h1 class="text-uppercase">Our Expert Coaches</h1> -->
             </div>
           </div>
           <div class="col-lg-5 col-md-5 col-sm-6 text-right">
@@ -1587,17 +1580,17 @@
                 </div>
               </div>
               <div class="team-expert-meta text-center mt-30">
-                <h4 class="text-uppercase mb-15">DAVID PK. WILLIAM</h4>
-                <p class="text-uppercase">Yoga Trainer</p>
+                <h4 class="text-uppercase mb-15">Lindsey Brown </h4>
+                <p class="text-uppercase">Owner & Coach</p>
                 <ul>
                   <li>
-                    <span class=""><strong>Classes: </strong></span> Strength
-                    Training
+                    <span class=""><strong>Classes: </strong></span> Strength and Bootcamp
+                    
                   </li>
-                  <li>
+                  <!-- <li>
                     <strong>About: </strong> I've been training with lorem ipsum
                     since the gladiators began
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </div>
@@ -1617,24 +1610,24 @@
                 </div>
               </div>
               <div class="team-expert-meta text-center mt-30">
-                <h4 class="text-uppercase mb-15">Mark pk Parker</h4>
-                <p class="text-uppercase">Yoga Trainer</p>
+                <h4 class="text-uppercase mb-15">Amber Wiliamson</h4>
+                <p class="text-uppercase">Athlete & Coach</p>
                 <ul>
                   <li>
                     <span class="text-uppercase"
                       ><strong>Classes: </strong></span
                     >
-                    Strength Training
+                    Engine
                   </li>
-                  <li>
+                  <!-- <li>
                     <strong>About: </strong> I've been training with lorem ipsum
                     since the gladiators began
-                  </li>
+                  </li> -->
                 </ul>
               </div>
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <!-- <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="single-team-expert">
               <div
                 class="team-expert-bg position-relative"
@@ -1647,8 +1640,8 @@
                     <a href="#"><i class="fa fa-facebook"></i></a>
                   </div>
                 </div>
-              </div>
-              <div class="team-expert-meta text-center mt-30">
+              </div> -->
+              <!-- <div class="team-expert-meta text-center mt-30">
                 <h4 class="text-uppercase mb-15">steve m. jobs</h4>
                 <p class="text-uppercase">Yoga Trainer</p>
                 <ul>
@@ -1663,10 +1656,10 @@
                     since the gladiators began
                   </li>
                 </ul>
-              </div>
+              </div> -->
             </div>
           </div>
-          <div class="col-lg-3 col-md-6 col-sm-6">
+          <!-- <div class="col-lg-3 col-md-6 col-sm-6">
             <div class="single-team-expert">
               <div
                 class="team-expert-bg position-relative"
@@ -1697,7 +1690,7 @@
                 </ul>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -1930,15 +1923,11 @@
                 </div>
                 <div class="testimonial-inner-content">
                   <p class="mb-40">
-                    Smallville Athletics is more then a gym, for me its been a
-                    place to improve my overall quality of life and truely make
-                    myself a better person. I've been going for over 3 years now
-                    and my flexibility, strength, and general quality of life
-                    has increased considerably.
+                    Smallville has been like a second home to me. It's a place I can go to clear my head. The most important thing that keeps me coming back is the people that you get to workout with. The initial thought of working out in a group was not appealing but I have found that it is a great way to push through and shatter your previous goals.
                   </p>
                   <div class="testimonial-meta">
                     <h3 class="text-uppercase">
-                      DAVID PK. WILLIAM <span>Yoga Trainer</span>
+                      Chris Garret <span>Smallville Athlete since 2016</span>
                     </h3>
                   </div>
                 </div>
@@ -1956,16 +1945,11 @@
                 </div>
                 <div class="testimonial-inner-content">
                   <p class="mb-40">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-                    Duis tetur tellus in orci convallis aliquam. Ut nisl dui,
-                    ultricies sit amet iaculis accumsan, fringilla vitae augue.
-                    Donec vel porttitor urna, id gravida erat. Vivamus egestas,
-                    metus vitae maximus vehicula, ante nisl ultrices eros,
-                    ultrices euismod ipsum lectus nec odio.
+                    “I have tried other gym memberships or exercising on my own but I never stick with it or push myself as much. I talked to some coworkers who were going to Smallville and they had nothing but good things to say about it so I decided to try a class in hopes I would stick with it. It was definitely the right choice!”
                   </p>
                   <div class="testimonial-meta">
                     <h3 class="text-uppercase">
-                      DAVID PK. WILLIAM <span>Yoga Trainer</span>
+                      Autumn Buckalew <span>Smallville Athlete since 2022</span>
                     </h3>
                   </div>
                 </div>
@@ -2080,11 +2064,11 @@
             </div>
             <div class="col-lg-4">
               <!-- <div class="banner-right-side">
-                <!-- <div class="site-btn about-btn why-btn banner-btn"> -->
+                <div class="site-btn about-btn why-btn banner-btn"> -->
                   <!-- <a href="#" class="primary-btn btn filled-btn text-uppercase"
                     >become a member</a
                   > -->
-                </div> -->
+                </div> 
               </div>
             </div>
           </div>
@@ -2129,13 +2113,13 @@
                     </li>
                     <li>
                       <i class="fa fa-envelope"></i
-                      ><a href="mailto:admin@smallville-athletics.com"
-                        >admin@smallviille-athleticscom</a
+                      ><a href="mailto:smallvilleathletics@gmail.com"
+                        >smallvilleathletics@gmail.com</a
                       >
                     </li>
                     <li>
                       <i class="fa fa-phone"></i
-                      ><a href="tel:+16207199602">(620) 719-9602</a>
+                      ><a href="tel:+16207199602">(620) 224-2470</a>
                     </li>
                   </ul>
                 </div>
