--- a/index.html
+++ b/index.html
@@ -1599,7 +1599,7 @@
             <div class="single-team-expert">
               <div
                 class="team-expert-bg position-relative"
-                data-background="https://images.unsplash.com/photo-1616279969096-54b228f5f103?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=765&q=80"
+                data-background="amber.jpg"
               >
                 <div class="team-expert-social-list">
                   <div class="social-list expert-social-list">
@@ -1625,6 +1625,40 @@
                   </li> -->
                 </ul>
               </div>
+              
+            </div>
+          </div>
+          <div class="col-lg-3 col-md-6 col-sm-6">
+            <div class="single-team-expert">
+              <div
+                class="team-expert-bg position-relative"
+                data-background="wyat.jpg"
+              >
+                <div class="team-expert-social-list">
+                  <div class="social-list expert-social-list">
+                    <a href="#"><i class="fa fa-instagram"></i></a>
+                    <a href="#"><i class="fa fa-twitter"></i></a>
+                    <a href="#"><i class="fa fa-facebook"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="team-expert-meta text-center mt-30">
+                <h4 class="text-uppercase mb-15">Wesley DeHaven </h4>
+                <p class="text-uppercase">Athlete & Coach</p>
+                <ul>
+                  <li>
+                    <span class="text-uppercase"
+                      ><strong>Classes: </strong></span
+                    >
+                    J.V.
+                  </li>
+                  <!-- <li>
+                    <strong>About: </strong> I've been training with lorem ipsum
+                    since the gladiators began
+                  </li> -->
+                </ul>
+              </div>
+              
             </div>
           </div>
           <!-- <div class="col-lg-3 col-md-6 col-sm-6">
@@ -1915,7 +1949,7 @@
               >
                 <div
                   class="client-image position-relative"
-                  data-background="https://images.unsplash.com/photo-1589860518300-9eac95f784d9?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"
+                  data-background="chris.jpg"
                 >
                   <div class="testimonial-qoute">
                     <i class="fa fa-quote-right"></i>
@@ -1937,7 +1971,7 @@
               >
                 <div
                   class="client-image position-relative"
-                  data-background="assets/img/testimonial/testimonial-client-1.jpg"
+                  data-background="autumn.jpg"
                 >
                   <div class="testimonial-qoute">
                     <i class="fa fa-quote-right"></i>
